fix overlapping paginator for reviews (bug 688795)

--- a/media/css/impala/listing.less
+++ b/media/css/impala/listing.less
@@ -307,6 +307,10 @@
     padding-top: 1em;
 }
 
+.item + .paginator {
+    border: 0;
+}
+
 .html-rtl .listing .item {
     .collector-note,
     .performance-note {
